--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
     "name": "project-fakerjs",
     "version": "1.0.0",
     "description": "FullSail-Project Faker JS",
-    "source": "index.html",
+    "source": "src/index.html",
     "scripts": {
-        "start": "",
-        "build": "",
+        "start": "parcel",
+        "build": "build parcel",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Hazey",
     "license": "ISC",
     "dependencies": {
-        "@faker-js/faker": "^7.6.0"
+        "@faker-js/faker": "^7.6.0",
+        "parcel": "^2.8.0"
     }
 }
