--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "name": "project-fakerjs",
     "version": "1.0.0",
+    "engines": {
+        "node": "18.x"
+    },
     "description": "FullSail-Project Faker JS",
     "source": "src/index.html",
     "scripts": {
