--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
         "build": "build parcel",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Hazey8709/Project-fakerJS"
+    },
     "author": "Hazey",
     "license": "ISC",
     "dependencies": {
