--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "license": "ISC",
     "dependencies": {
         "@faker-js/faker": "^7.6.0",
+        "mapbox-gl": "^2.11.0",
         "parcel": "^2.8.0"
     }
 }
