--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "@faker-js/faker": "^7.6.0",
         "mapbox-gl": "^2.11.0",
         "parcel": "^2.8.0"
+    },
+    "devDependencies": {
+        "process": "^0.11.10"
     }
 }
