--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "dependencies": {
         "@faker-js/faker": "^7.6.0",
         "mapbox-gl": "^2.11.0",
-        "parcel": "^2.8.0"
+        "parcel": "^2.8.0",
+        "postcss": "^8.4.19",
+        "tailwindcss": "^3.2.4"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.13",
         "process": "^0.11.10"
     }
 }
