--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "mapbox-gl": "^2.11.0",
         "parcel": "^2.8.0",
         "postcss": "^8.4.19",
-        "tailwindcss": "^3.2.4"
+        "tailwindcss": "^3.2.4",
+        "autoprefixer": "^10.4.13"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.13",
