--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
         "mapbox-gl": "^2.11.0",
         "parcel": "^2.8.0",
         "postcss": "^8.4.19",
-        "tailwindcss": "^3.2.4",
-        "autoprefixer": "^10.4.13"
+        "tailwindcss": "^3.2.4"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.13",
